Fix: Z-index on tablet size

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -256,7 +256,7 @@ nav {
     align-content: start;
     padding-top: 92px;
     z-index: 12;
-    transition: left 0.2s linear;
+    transition: left 0.2s linear, box-shadow 0.2s ease-in-out;
 
     @media (max-width: @size[tablet]) {
         @state-color: var(--md-sys-color-primary);
@@ -264,11 +264,13 @@ nav {
         .surface-tint();
 
         position: fixed;
+        z-index: 12;
         left: -75px;
         background: var(--md-sys-color-surface);
 
         &:hover {
             left: 0;
+            .elevation-level2();
         }
     }
 }
